Header overflow fix.

--- a/css/screen.css
+++ b/css/screen.css
@@ -46,8 +46,8 @@ table {
 body { background: #fff; font-family: Verdana, Arial; font-size: 12px; }
 
 #container { margin: 0px auto; overflow: hidden; position: relative; width: 900px; }
-	#header { margin: 24px 0 12px 0; }
-	#header a { color: #c80000; display: block; float: left; font-size: 14px; font-weight: bold; line-height: 58px; margin: 0 8px; text-decoration: none; }
+	#header { margin: 24px 0 12px 0; overflow: hidden; }
+	#header a { color: #c80000; display: block; float: left; font-size: 14px; font-weight: bold; line-height: 58px; margin: 0 24px; text-decoration: none; }
 	#header a:hover { text-decoration: underline; }
 	
 	#content { margin: 8px 0; }
